--- a/render/index.html
+++ b/render/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
-    <script src="build/react.js"></script>
-    <script src="build/react-dom.js"></script>
+    <script src="../build/react.js"></script>
+    <script src="../build/react-dom.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.24/browser.min.js"></script>
   </head>
   <body>
